@@ -38,6 +38,7 @@ class ApiFormatXml extends ApiFormatBase {
 	private $mRootElemName = 'api';
 	public static $namespace = 'http://www.mediawiki.org/xml/api/';
 	private $mDoubleQuote = false;
+	private $mIncludeNamespace = false;
 	private $mXslt = null;
 
 	public function __construct( $main, $format ) {
@@ -59,15 +60,22 @@ class ApiFormatXml extends ApiFormatBase {
 	public function execute() {
 		$params = $this->extractRequestParams();
 		$this->mDoubleQuote = $params['xmldoublequote'];
+		$this->mIncludeNamespace = $params['includexmlnamespace'];
 		$this->mXslt = $params['xslt'];
 
 		$this->printText( '<?xml version="1.0"?>' );
 		if ( !is_null( $this->mXslt ) ) {
 			$this->addXslt();
 		}
+		if ( $this->mIncludeNamespace ) {
+			$data = array( 'xmlns' => self::$namespace ) + $this->getResultData();
+		} else {
+			$data = $this->getResultData();
+		}
+		
 		$this->printText(
 			self::recXmlPrint( $this->mRootElemName,
-				array( 'xmlns' => self::$namespace ) + $this->getResultData(),
+				$data,
 				$this->getIsHtml() ? - 2 : null,
 				$this->mDoubleQuote
 			)
@@ -201,6 +209,7 @@ class ApiFormatXml extends ApiFormatBase {
 		return array(
 			'xmldoublequote' => false,
 			'xslt' => null,
+			'includexmlnamespace' => false,
 		);
 	}
 
@@ -208,6 +217,7 @@ class ApiFormatXml extends ApiFormatBase {
 		return array(
 			'xmldoublequote' => 'If specified, double quotes all attributes and content',
 			'xslt' => 'If specified, adds <xslt> as stylesheet',
+			'includexmlnamespace' => 'If specified, adds an XML namespace'
 		);
 	}
 
